k8s/gatekeeper/violating-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-pod
spec:
  containers:
    - name: nginx
      image: unknown-registry.com/nginx:latest
